--- a/shopBalance/Base.lproj/Main.storyboard
+++ b/shopBalance/Base.lproj/Main.storyboard
@@ -113,37 +113,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Balance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06Y-f4-fR5">
-                                <rect key="frame" x="174" y="125" width="66" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06Y-f4-fR5">
+                                <rect key="frame" x="174.33333333333334" y="125.00000000000001" width="65.333333333333314" height="20.333333333333357"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Budget:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8H-Cy-Tby">
-                                <rect key="frame" x="20" y="64" width="61" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8H-Cy-Tby">
+                                <rect key="frame" x="20" y="63.999999999999993" width="60.333333333333329" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="1E9-jl-OIp">
-                                <rect key="frame" x="20" y="84" width="70" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="1E9-jl-OIp">
+                                <rect key="frame" x="20" y="89.333333333333329" width="59.333333333333329" height="25"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Total:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shv-va-1hv">
-                                <rect key="frame" x="339" y="64" width="43" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shv-va-1hv">
+                                <rect key="frame" x="351.66666666666674" y="63.999999999999993" width="42.333333333333314" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ssq-H7-74y">
-                                <rect key="frame" x="324" y="84" width="70" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ssq-H7-74y">
+                                <rect key="frame" x="334.66666666666674" y="84.333333333333329" width="59.333333333333314" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lQ7-kz-kBH"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="next"/>
@@ -156,34 +154,31 @@
                                     <outlet property="delegate" destination="5dz-d1-lTI" id="xAR-Jm-fbD"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$000.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHm-xl-LZH">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$000.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHm-xl-LZH">
                                 <rect key="frame" x="98" y="154" width="219" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SaR-jg-ryn">
-                                <rect key="frame" x="89" y="72" width="30" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SaR-jg-ryn">
+                                <rect key="frame" x="88.333333333333329" y="72" width="30" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="🔄"/>
                                 <connections>
                                     <action selector="updatePressed:" destination="5dz-d1-lTI" eventType="touchUpInside" id="UG5-s0-4Sg"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QGf-cH-7LU">
-                                <rect key="frame" x="60" y="248" width="294" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QGf-cH-7LU">
+                                <rect key="frame" x="60" y="221.33333333333337" width="294" height="56.666666666666629"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lvL-UZ-70u">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lvL-UZ-70u">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="56.666666666666657"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bread" borderStyle="roundedRect" placeholder="Item" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="c6R-sB-9My">
-                                        <rect key="frame" x="40" y="0.0" width="150" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bread" borderStyle="roundedRect" placeholder="Item" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="c6R-sB-9My">
+                                        <rect key="frame" x="40" y="0.0" width="150" height="56.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="JIm-4l-fr7"/>
                                         </constraints>
@@ -191,14 +186,14 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2.49" borderStyle="roundedRect" placeholder="Price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fw5-Yb-LEv">
-                                        <rect key="frame" x="200" y="0.0" width="54" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2.49" borderStyle="roundedRect" placeholder="Price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fw5-Yb-LEv">
+                                        <rect key="frame" x="200" y="0.0" width="54" height="56.666666666666657"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3N-6r-8LL">
-                                        <rect key="frame" x="264" y="0.0" width="30" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3N-6r-8LL">
+                                        <rect key="frame" x="264" y="0.0" width="30" height="56.666666666666657"/>
                                         <color key="backgroundColor" red="0.22175822573168075" green="0.72473826142131981" blue="0.36064245580366111" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="+">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -212,10 +207,27 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1E9-jl-OIp" firstAttribute="baseline" secondItem="ssq-H7-74y" secondAttribute="baseline" id="3C4-WT-P3z"/>
+                            <constraint firstItem="QGf-cH-7LU" firstAttribute="top" secondItem="NHm-xl-LZH" secondAttribute="bottom" constant="8" symbolic="YES" id="62O-Cw-Fu4"/>
+                            <constraint firstItem="M8H-Cy-Tby" firstAttribute="leading" secondItem="FpE-HW-HEx" secondAttribute="leadingMargin" id="62l-wF-JD5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="shv-va-1hv" secondAttribute="trailing" id="96w-e0-Exi"/>
+                            <constraint firstItem="QGf-cH-7LU" firstAttribute="centerX" secondItem="NHm-xl-LZH" secondAttribute="centerX" id="AD6-Id-wJw"/>
                             <constraint firstAttribute="trailing" secondItem="hbB-gy-zOS" secondAttribute="trailing" id="AqN-Px-Cq7"/>
+                            <constraint firstItem="shv-va-1hv" firstAttribute="baseline" secondItem="M8H-Cy-Tby" secondAttribute="baseline" id="CY7-vK-0Em"/>
+                            <constraint firstItem="QGf-cH-7LU" firstAttribute="centerX" secondItem="hbB-gy-zOS" secondAttribute="centerX" id="D5H-ek-IMh"/>
+                            <constraint firstItem="ssq-H7-74y" firstAttribute="trailing" secondItem="FpE-HW-HEx" secondAttribute="trailingMargin" id="Ibt-wA-h00"/>
+                            <constraint firstItem="QGf-cH-7LU" firstAttribute="centerX" secondItem="06Y-f4-fR5" secondAttribute="centerX" id="QHN-3r-Nkm"/>
+                            <constraint firstItem="ssq-H7-74y" firstAttribute="top" secondItem="shv-va-1hv" secondAttribute="bottom" id="RIi-HZ-GlQ"/>
+                            <constraint firstItem="SaR-jg-ryn" firstAttribute="leading" secondItem="M8H-Cy-Tby" secondAttribute="trailing" constant="8" symbolic="YES" id="TGf-fO-VUB"/>
                             <constraint firstItem="hbB-gy-zOS" firstAttribute="top" secondItem="fQD-W1-g2O" secondAttribute="bottom" constant="231" id="TvW-8K-GcZ"/>
+                            <constraint firstItem="NHm-xl-LZH" firstAttribute="top" secondItem="06Y-f4-fR5" secondAttribute="bottom" constant="8" symbolic="YES" id="Urp-2H-Gxa"/>
                             <constraint firstItem="hbB-gy-zOS" firstAttribute="leading" secondItem="FpE-HW-HEx" secondAttribute="leading" id="aEZ-XY-Yds"/>
+                            <constraint firstItem="1E9-jl-OIp" firstAttribute="leading" secondItem="FpE-HW-HEx" secondAttribute="leadingMargin" id="gZl-YT-3we"/>
+                            <constraint firstItem="06Y-f4-fR5" firstAttribute="top" secondItem="fQD-W1-g2O" secondAttribute="bottom" constant="61" id="gn5-8v-H6n"/>
+                            <constraint firstItem="hbB-gy-zOS" firstAttribute="top" secondItem="QGf-cH-7LU" secondAttribute="bottom" constant="17" id="qDt-pE-OCn"/>
+                            <constraint firstItem="shv-va-1hv" firstAttribute="top" secondItem="fQD-W1-g2O" secondAttribute="bottom" id="qgh-H5-FMk"/>
                             <constraint firstItem="WBM-Bs-Nca" firstAttribute="top" secondItem="hbB-gy-zOS" secondAttribute="bottom" id="sAO-mE-SA2"/>
+                            <constraint firstItem="1E9-jl-OIp" firstAttribute="bottom" secondItem="ssq-H7-74y" secondAttribute="bottom" id="y7D-ld-4pi"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="PYo-Tt-UdL"/>
