--- a/shopBalance/Base.lproj/Main.storyboard
+++ b/shopBalance/Base.lproj/Main.storyboard
@@ -114,31 +114,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Balance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06Y-f4-fR5">
-                                <rect key="frame" x="174" y="125" width="66" height="20.333333333333371"/>
+                                <rect key="frame" x="174.33333333333334" y="125" width="65.333333333333314" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8H-Cy-Tby">
-                                <rect key="frame" x="20" y="64" width="61" height="21"/>
+                                <rect key="frame" x="20" y="63.999999999999993" width="60.333333333333329" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="1E9-jl-OIp">
-                                <rect key="frame" x="20" y="90" width="60" height="25"/>
+                                <rect key="frame" x="20" y="89.333333333333329" width="59.333333333333329" height="25"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shv-va-1hv">
-                                <rect key="frame" x="351" y="64" width="43" height="21"/>
+                                <rect key="frame" x="351.66666666666674" y="63.999999999999993" width="42.333333333333314" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ssq-H7-74y">
-                                <rect key="frame" x="334" y="85" width="60" height="30"/>
+                                <rect key="frame" x="334.66666666666674" y="84.333333333333329" width="59.333333333333314" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lQ7-kz-kBH"/>
                                 </constraints>
@@ -161,7 +161,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SaR-jg-ryn">
-                                <rect key="frame" x="89" y="72" width="30" height="41"/>
+                                <rect key="frame" x="88.333333333333329" y="72" width="30" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="🔄"/>
                                 <connections>
@@ -345,11 +345,6 @@
                                     <outlet property="delegate" destination="Gl6-7H-ry2" id="QM2-Y3-rl7"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YPh-8s-8uD">
-                                <rect key="frame" x="238" y="58" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -386,31 +381,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGJ-zX-Z17">
-                                <rect key="frame" x="174" y="107" width="66" height="21"/>
+                                <rect key="frame" x="174.33333333333334" y="107" width="65.333333333333314" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OaF-QT-OL8">
-                                <rect key="frame" x="20" y="54" width="61" height="21"/>
+                                <rect key="frame" x="20" y="53.999999999999993" width="60.333333333333329" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="afy-lm-QdT">
-                                <rect key="frame" x="20" y="80" width="60" height="25"/>
+                                <rect key="frame" x="20" y="79.333333333333329" width="59.333333333333329" height="25"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFA-iQ-7gW">
-                                <rect key="frame" x="351" y="54" width="43" height="21"/>
+                                <rect key="frame" x="351.66666666666674" y="53.999999999999993" width="42.333333333333314" height="20.333333333333321"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="$000.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="AcK-2k-mqB">
-                                <rect key="frame" x="334" y="75" width="60" height="30"/>
+                                <rect key="frame" x="334.66666666666674" y="74.333333333333329" width="59.333333333333314" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DZc-Cb-kJA"/>
                                 </constraints>
@@ -419,7 +414,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="next"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PFM-e8-EIo">
-                                <rect key="frame" x="0.0" y="278" width="414" height="404"/>
+                                <rect key="frame" x="0.0" y="277.33333333333326" width="414" height="404.66666666666674"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="YK6-Dn-3Vs" id="azO-zg-BOV"/>
@@ -427,22 +422,22 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$000.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="opx-2S-KSU">
-                                <rect key="frame" x="98" y="136" width="219" height="67"/>
+                                <rect key="frame" x="98" y="135.33333333333334" width="219" height="67"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jyN-Bj-M0T">
-                                <rect key="frame" x="50" y="211" width="314" height="50"/>
+                                <rect key="frame" x="50" y="210.33333333333331" width="314" height="49.999999999999943"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="#" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bx9-fy-Wd1">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="49.999999999999972"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item" textAlignment="natural" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vnR-ll-7aw">
-                                        <rect key="frame" x="40" y="0.0" width="150" height="50"/>
+                                        <rect key="frame" x="40" y="0.0" width="150" height="49.999999999999972"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="DSU-uV-taj"/>
                                         </constraints>
@@ -451,13 +446,13 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vvB-z0-g75">
-                                        <rect key="frame" x="200" y="0.0" width="54" height="50"/>
+                                        <rect key="frame" x="200" y="0.0" width="54" height="49.999999999999972"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ku7-ca-lb1">
-                                        <rect key="frame" x="264" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="264" y="0.0" width="50" height="49.999999999999972"/>
                                         <color key="backgroundColor" red="0.22175822570000001" green="0.72473826139999997" blue="0.36064245579999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="sAd-sY-zhm"/>
@@ -473,7 +468,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9NS-zs-aA1">
-                                <rect key="frame" x="20" y="101" width="57" height="33"/>
+                                <rect key="frame" x="20" y="100.33333333333334" width="57" height="33.000000000000028"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Update"/>
                                 <connections>
@@ -586,7 +581,7 @@
     </scenes>
     <resources>
         <image name="image.gif" width="800" height="533"/>
-        <image name="list2" width="30" height="30"/>
-        <image name="receipt2" width="30" height="30"/>
+        <image name="list2" width="29" height="35"/>
+        <image name="receipt2" width="21" height="35"/>
     </resources>
 </document>
